[gd_scene load_steps=3 format=2]

[ext_resource path="res://House.gd" type="Script" id=1]
[ext_resource path="res://house.png" type="Texture" id=2]

[node name="House" type="Node2D"]
position = Vector2( 160, 50 )
script = ExtResource( 1 )

[node name="HouseTexture" type="TextureButton" parent="."]
margin_right = 57.0
margin_bottom = 57.0
texture_normal = ExtResource( 2 )

[node name="RentLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = -20.0
margin_right = 57.0
text = "0$"
align = 2
valign = 1

[node name="TimerUpdateLabel" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TimerAct" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="pressed" from="HouseTexture" to="." method="_on_HouseTexture_pressed"]
[connection signal="timeout" from="TimerUpdateLabel" to="." method="_on_TimerUpdateLabel_timeout"]
[connection signal="timeout" from="TimerAct" to="." method="_on_TimerAct_timeout"]
